--- a/app/assets/stylesheets/layouts/_project_add.scss
+++ b/app/assets/stylesheets/layouts/_project_add.scss
@@ -44,6 +44,9 @@
 		padding: 0 50px 50px;
 		min-height: 30vh;
 		display: table-cell;
+		.project_summary label {
+			line-height: 1.9;
+		}
 		&.-left {
 			border-right: 1px solid rgba(0, 0, 0, .15);
 		}
