--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,7 +28,11 @@
                 </ul>
 
                 <ul class="user-tools menu-section -color-2">
-                  <li class="item"><%= link_to (t 'add_project'), '/', {:class => "item-link", :method => :get} %></li>
+                  <li class="item"><%= link_to (t 'add_project'), new_user_project_path(user_id: current_user.id), {:class => "item-link", :method => :get} %></li>
+                </ul>
+
+                <ul class="user-tools menu-section -color-2">
+                  <li class="item"><%= link_to (t 'add_event'), new_user_event_path(user_id: current_user.id), {:class => "item-link", :method => :get} %></li>
                 </ul>
               </div>
             </div>
