Intro section gradient fix

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -4,7 +4,12 @@
  *
  */
 .c-map {
-  height: 600px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
 
   .leaflet-control-attribution {
     display: none;
