--- a/app/assets/stylesheets/layouts/_country.scss
+++ b/app/assets/stylesheets/layouts/_country.scss
@@ -4,7 +4,7 @@
     height: 900px;
 
     .intro-info {
-      background: linear-gradient(to bottom, transparent, $color-4);
+      background: linear-gradient(to bottom, rgba(104,41,155, 0), rgba(104,41,155, 1));
     }
 
     .c-section-menu {
