--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,4 @@
-<section class="event">
+<section class="country">
   <div class="c-section-intro -color-4">
     <div id="map" class="map c-map">
       <div class="c-map-intro-legend">
