--- a/app/assets/stylesheets/components/_map-filters.scss
+++ b/app/assets/stylesheets/components/_map-filters.scss
@@ -20,3 +20,10 @@
     justify-content: center;
   }
 }
+
+#btn-clear-filters {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+}
