--- a/app/views/network_events/new.html.erb
+++ b/app/views/network_events/new.html.erb
@@ -1,6 +1,6 @@
 <div class="project_add">
   <%= simple_form_for [@user, @event], url: user_events_url(@user) do |f| %>
     <%= render partial: f %>
-    <%= f.button :submit, 'Submit', class: '' %>
+    <%= f.button :submit, 'Submit', class: 'f-submit -network' %>
   <% end %>
 </div>
