--- a/app/views/map/_projects.html.erb
+++ b/app/views/map/_projects.html.erb
@@ -30,25 +30,27 @@
   <h2 class="c-title -big">215</h2>
 </div>
 
-<!-- Project cards -->
-<% @projects.each do |p| %>
-  <div class="card -mobile-large-1-2 -tablet-1-3">
-    <h4 class="c-card-title -border-2"><%= p.project_leads.first.name %></h4>
-    <%= link_to project_path(p.id), { :class => "link" } do %>
-      <h3 class="c-title"><%= p.title %></h3>
-    <% end %>
-    <p><%= truncate(p.summary, :length => 300) %></p>
-  </div>
-<% end %>
+<% if @projects && @projects.size() > 0 %>
+  <!-- Project cards -->
+  <% @projects.each do |p| %>
+    <div class="card -mobile-large-1-2 -tablet-1-3">
+      <h4 class="c-card-title -border-2"><%= p.project_leads.first.name %></h4>
+      <%= link_to project_path(p.id), { :class => "link" } do %>
+        <h3 class="c-title"><%= p.title %></h3>
+      <% end %>
+      <p><%= truncate(p.summary, :length => 300) %></p>
+    </div>
+  <% end %>
 
-<% if @projects.size() > 0 %>
-  <div class="c-pagination-button">
-    <%= link_to (t 'show_more'),
-            map_path(request.query_parameters.merge({ limit: (params['limit'] ? params['limit'].to_i + 1 : 2 )  })),
-            class: "circle-button",
-            remote: true,
-            data: {magic: true} %>
-  </div>
+    <div class="c-pagination-button">
+      <%= link_to (t 'show_more'),
+              map_path(request.query_parameters.merge({ limit: (params['limit'] ? params['limit'].to_i + 1 : 2 )  })),
+              class: "circle-button",
+              remote: true,
+              data: {magic: true} %>
+    </div>
 <% else %>
-  <p class="wrapper">No projects</p>
+  <div class="c-no-items -padding wrapper">
+    <p>No projects</p>
+  </div>
 <% end %>
