--- a/app/views/users/_events.html.erb
+++ b/app/views/users/_events.html.erb
@@ -1,36 +1,51 @@
 <h3 class="c-title -normal -grid wrapper"><%= t "your_events" %></h3>
-<!-- c-grid-events -->
-<div class="c-card-grid">
-  <% @events.each do |e| %>
-    <div class="card -mobile-large-1-2 -tablet-1-3">
-      <h4 class="c-card-title -border-1"><%= t 'active' %></h4>
-      <a>
-        <h3 class="c-title"><%= e.title %></h3>
-      </a>
-      <div class="c-tag-list -closer">
+<% if @projects && @projects.size() != 0 %>
+  <!-- c-grid-events -->
+  <div class="c-card-grid">
+    <% @events.each do |e| %>
+      <div class="card -mobile-large-1-2 -tablet-1-3">
+        <h4 class="c-card-title -border-1"><%= t 'active' %></h4>
+        <a>
+          <h3 class="c-title"><%= e.title %></h3>
+        </a>
+        <div class="c-tag-list -closer">
 
+        </div>
+        <%= link_to (t 'edit'), edit_user_event_path(current_user, e['id'] ), {:class => "c-button -color-3 -network"} %>
       </div>
-      <%= link_to (t 'edit'), edit_user_event_path(current_user, e['id'] ), {:class => "c-button -color-3 -network"} %>
-    </div>
-  <% end %>
-
-</div>
+    <% end %>
+  </div>
+<% else %>
+  <div class="c-no-items wrapper">
+    <p>No Events</p>
+    <a class="c-button -color-1" href="/network/1/events/new">Add Event</a>
+  </div>
+<% end %>
 
 <h3 class="c-title -normal -grid wrapper"><%= t "following" %></h3>
-<!-- c-grid-projects -->
-<div class="c-card-grid">
-  <!-- Provisional loop  -->
-  <% for i in 1..4 %>
-    <div class="card -mobile-large-1-2 -tablet-1-3">
-      <h4 class="c-card-title -border-1"><%= t 'active' %></h4>
-      <a>
-        <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
-      </a>
-      <div class="c-tag-list -closer">
-        <% ['Breast', 'Bladder', 'Pancreas'].each do |t| %>
-        <p class="tag"><%= t %></p>
-        <% end %>
+<% if @eventsFollowing && @eventsFollowing.size() != 0 %>
+  <!-- c-grid-projects -->
+  <div class="c-card-grid">
+    <!-- Provisional loop  -->
+    <% for i in 1..4 %>
+      <div class="card -mobile-large-1-2 -tablet-1-3">
+        <h4 class="c-card-title -border-1"><%= t 'active' %></h4>
+        <a>
+          <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
+        </a>
+        <div class="c-tag-list -closer">
+          <% ['Breast', 'Bladder', 'Pancreas'].each do |t| %>
+          <p class="tag"><%= t %></p>
+          <% end %>
+        </div>
       </div>
-    </div>
-  <% end %>
-</div>
+    <% end %>
+  </div>
+<% else %>
+  <div class="c-no-items wrapper">
+    <p>No Events following</p>
+    <a class="c-button -color-1" href="/map?type=events">Explore Events</a>
+    <br/>
+    <br/>
+  </div>
+<% end %>
