--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,6 +1,6 @@
 <div class="c-section-intro">
   <button id="btn-clear-filters" class="btn-reset-filters c-button -filled -inverse">Clear filters</button>
-	<div id="map" class="map c-map"></div>
+	<div id="map" class="map c-map -map"></div>
   
   <div id="map-tooltip" class="c-map-tooltip"></div>
 
