--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <section class="country">
   <div class="c-section-intro -color-4">
-    <div id="map" class="map c-map">
+    <div id="map" class="map c-map -detail">
       <div class="c-map-intro-legend">
         <ul class="legend-list">
           <li class="item"><div class="icon -first"></div><%= t 'project_leads' %></li>
