--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -9,11 +9,11 @@
   z-index: 1;
   background: $color-4;
 
-  &.-map.leaflet-container {
+  &.-map, &.-map.leaflet-container {
     background: $color-1;
   }
 
-  &.-detail.leaflet-container {
+  &.-detail, &.-detail.leaflet-container {
     background: $color-4;
   }
 
