--- a/app/views/users/_projects.html.erb
+++ b/app/views/users/_projects.html.erb
@@ -21,6 +21,14 @@
       </div>
     <% end %>
   </div>
+
+  <div class="c-pagination-button">
+    <%= link_to (t 'show_more'),
+            user_path(request.query_parameters.merge({ limit: (params['limit'] ? params['limit'].to_i + 1 : 2 )  })),
+            class: "circle-button",
+            remote: true,
+            data: {magic: true} %>
+  </div>
 <% else %>
   <div class="c-no-items wrapper">
     <p>No Projects</p>
@@ -47,6 +55,14 @@
         </div>
       </div>
     <% end %>
+  </div>
+
+  <div class="c-pagination-button">
+    <%= link_to (t 'show_more'),
+            user_path(request.query_parameters.merge({ limitFollow: (params['limitFollow'] ? params['limitFollow'].to_i + 1 : 2 )  })),
+            class: "circle-button",
+            remote: true,
+            data: {magic: true} %>
   </div>
 <% else %>
   <div class="c-no-items wrapper">
