Section intro and user grid fixes

--- a/app/assets/stylesheets/components/_card-grid.scss
+++ b/app/assets/stylesheets/components/_card-grid.scss
@@ -91,6 +91,7 @@
 
     /* Specific sizes relying on the screen size */
     $breakpoints: (
+      "mobile-small": $mq-mobile-small,
       "mobile-large": $mq-mobile-large,
       "tablet":       $mq-tablet,
       "laptop":       $mq-laptop
