--- a/app/views/users/_events.html.erb
+++ b/app/views/users/_events.html.erb
@@ -3,7 +3,7 @@
   <!-- c-grid-events -->
   <div class="c-card-grid">
     <% @events.each do |e| %>
-      <div class="card -mobile-large-1-2 -tablet-1-3">
+      <div class="card -mobile-small-1-1 -mobile-large-1-2 -tablet-1-3">
         <h4 class="c-card-title -border-1"><%= t 'active' %></h4>
         <a>
           <h3 class="c-title"><%= e.title %></h3>
@@ -36,7 +36,7 @@
   <div class="c-card-grid">
     <!-- Provisional loop  -->
     <% for i in 1..4 %>
-      <div class="card -mobile-large-1-2 -tablet-1-3">
+      <div class="card -mobile-small-1-1 -mobile-large-1-2 -tablet-1-3">
         <h4 class="c-card-title -border-1"><%= t 'active' %></h4>
         <a>
           <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
