--- a/app/views/users/_projects.html.erb
+++ b/app/views/users/_projects.html.erb
@@ -4,7 +4,7 @@
   <div class="c-card-grid" id="content">
     <!-- Provisional loop  -->
     <% @projects.each do |project| %>
-      <div class="card -mobile-large-1-2 -tablet-1-3">
+      <div class="card -mobile-small-1-1 -mobile-large-1-2 -tablet-1-3">
         <h4 class="c-card-title -border-1"><%= t 'active' %></h4>
         <%= link_to user_project_path(@user, project), class: "link" do  %>
           <h3 class="c-title"><%= project.title %></h3>
@@ -43,7 +43,7 @@
   <div class="c-card-grid">
     <!-- Provisional loop  -->
     <% for i in 1..4 %>
-      <div class="card -mobile-large-1-2 -tablet-1-3">
+      <div class="card -mobile-small-1-1 -mobile-large-1-2 -tablet-1-3">
         <h4 class="c-card-title -border-1"><%= t 'active' %></h4>
         <a>
           <h3 class="c-title">Research Training in Cancer Prevention and Control in Morocco</h3>
