--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,11 +27,11 @@
 
       </div>
       <div class="c-buttons-group">
-        <a href="/" class="c-button -inverse -filled btn-large">Follow</a>
+        <a class="c-button -inverse -filled btn-large">Follow</a>
         <div class="row-buttons">
-          <a href="/" class="c-button -inverse">Share</a>
-          <a href="/" class="c-button -inverse">Contact</a>
-          <a href="/" class="c-button -inverse">More</a>
+          <a class="c-button -inverse">Share</a>
+          <a class="c-button -inverse">Contact</a>
+          <a class="c-button -inverse">More</a>
         </div>
       </div>
     </div>
