--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,7 +28,8 @@
                 </ul>
 
                 <ul class="user-tools menu-section -color-2">
-                  <li class="item"><%= link_to (t 'add_project'), '/', {:class => "item-link", :method => :get} %></li>
+                  <li class="item"><%= link_to (t 'add_project'), new_user_project_path(current_user), {:class => "item-link", :method => :get} %></li>
+                  <li class="item"><%= link_to (t 'add_event'), new_user_event_path(current_user), {:class => "item-link", :method => :get} %></li>
                 </ul>
               </div>
             </div>
@@ -68,7 +69,8 @@
       </ul>
 
       <ul class="menu user-tools -color-1">
-        <li class="item"><%= link_to (t 'add_project'), '/', {:class => "item-link", :method => :get} %></li>
+        <li class="item"><%= link_to (t 'add_project'), new_user_project_path(current_user), {:class => "item-link", :method => :get} %></li>
+        <li class="item"><%= link_to (t 'add_event'), new_user_event_path(current_user), {:class => "item-link", :method => :get} %></li>
       </ul>
     <% end %>
   </div>
