--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -1,3 +1,5 @@
+<script> var PROJECT_ID = <%= @project.id %></script>
+<script> var AUTH_TOKEN = <%= 000 %></script>
 <span class="user-manual"><%= link_to (t 'download'), download_user_manual_path, class: "-color-1 f-user-manual", download: 'User Manual', data: {turbolinks: false}, title: "User Manual" %></span>
 <div class="c-section-intro">
 	<%= form.input :title, label: "#{@project.title}", label_html: { class: 'c-title -bigger -bold -hide-edited' }, :required => false, input_html: { class: '-editable', value: "#{@project.title}"}  %>
