--- a/app/assets/stylesheets/components/_map-marker.scss
+++ b/app/assets/stylesheets/components/_map-marker.scss
@@ -27,7 +27,7 @@
     color: $color-2;
   }
 
-  &.-project {
+  &.-point {
     // TO-DO: add this color to settings?
     box-shadow: none;
     background: #417394;
@@ -37,54 +37,13 @@
     }
   }
 
-  &.-people-markers {
-    background: $color-4;
-
-    .value {
-      color: $color-3;
-    }
-
-    &:hover {
-      background: darken($color-4, 2.5%);
-    }
-  }
-
-  &.-event-markers {
+  &.-events {
     background: $color-6;
-
+    
     .value {
       color: $color-3;
     }
 
-    &:hover {
-      background: darken($color-6, 2.5%);
-    }
-  }
-
-  &.-collaborator{
-    background: $color-6;
-
-    .value {
-      color: $color-3;
-      font-size: $font-size-normal;
-    }
-
-    &:hover {
-      background: darken($color-6, 3.5%);
-    }
-  }
-
-  &.-lead{
-    background: $color-3;
-
-    .value {
-      color: $color-2;
-      font-size: $font-size-normal;
-    }
-
-    &:hover {
-      background: darken($color-3, 2.5%);
-    }
   }
 
 	.arc {
