--- a/app/sql_queries/events_map_countries.sql.erb
+++ b/app/sql_queries/events_map_countries.sql.erb
@@ -3,7 +3,7 @@ count(distinct(events.id)),
 countries.country_name as location_name,
 countries.country_centroid as centroid,
 countries.country_iso_3 as iso,
-'event' as type
+'country' as type
 from events
 inner join countries on events.country = countries.country_name
 group by location_name, centroid, iso
