--- a/app/sql_queries/events_map_points.sql.erb
+++ b/app/sql_queries/events_map_points.sql.erb
@@ -4,7 +4,7 @@ events.title as event_title,
 countries.country_name as location_name,
 '{"type":"point","coordinates":[' || events.latitude || ',' || events.longitude || ']}' as centroid,
 countries.country_iso_3 as iso,
-'event' as type
+'point' as type
 from events
 inner join countries on events.country = countries.country_name
 group by event, event_title, location_name, centroid, iso
