--- a/app/sql_queries/events_map_regions.sql.erb
+++ b/app/sql_queries/events_map_regions.sql.erb
@@ -3,7 +3,7 @@ count(distinct(events.id)),
 countries.region_name as location_name,
 countries.region_centroid as centroid,
 countries.region_iso as iso,
-'event' as type
+'region' as type
 from events
 inner join countries on events.country = countries.country_name
 group by location_name, centroid, iso
