--- a/app/sql_queries/events_map_points.sql.erb
+++ b/app/sql_queries/events_map_points.sql.erb
@@ -4,6 +4,7 @@ events.title as title,
 countries.country_name as location_name,
 '{"type":"point","coordinates":[' || events.latitude || ',' || events.longitude || ']}' as centroid,
 countries.country_iso_3 as iso,
+countries.id as location_id,
 'point' as type
 from events
 inner join countries on events.country = countries.country_name
@@ -20,4 +21,4 @@ where 1=1
 <% if @params[:end_date] %>
   and (events.end_date < date(<%= quote @params[:end_date] %>))
 <% end %>
-group by event, title, location_name, centroid, iso
+group by event, title, location_name, location_id, centroid, iso
