--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,7 +4,7 @@
       <div class="c-map-intro-legend">
         <ul class="legend-list">
           <li class="item"><div class="icon -first"></div><%= t 'project_leads' %></li>
-          <li class="item"><div class="icon -second"></div><%= t 'collaborators' %></li>
+          <li class="item"><div class="icon -second"></div><%= t 'investigators' %></li>
         </ul>
         <div class="viel"></div>
       </div>
@@ -41,3 +41,7 @@
   </div>
 
 </section>
+
+<script type="text/javascript">
+  var EVENT_ID = <%= @event.id %>;
+</script>
