--- a/app/assets/stylesheets/components/_card-grid.scss
+++ b/app/assets/stylesheets/components/_card-grid.scss
@@ -38,7 +38,7 @@
   align-items: stretch;
   flex-wrap: wrap;
   border-top:    1px solid rgba(0, 0, 0, .2);
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  // border-bottom: 1px solid rgba(0, 0, 0, .2);
   /* The overflow property is mandatory to hide the borders of the cards at the
    * edge of the wrapper. If borders are necessary, set it on the wrapper
    * itself. */
