--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,5 +1,9 @@
 .c-header {
-  	box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, .15);
+  position: relative;
+
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.05);
+
+  z-index: 2;
 
   .desktop-menu {
     display: none;
@@ -48,8 +52,8 @@
           &.-active {
             > a {
               position: relative;
-              padding-top: 17px;
-              padding-bottom: 17px;
+              padding-top: 12px;
+              padding-bottom: 12px;
               color: $color-4;
               font-weight: $font-weight-normal;
 
