--- a/app/views/users/_projects.html.erb
+++ b/app/views/users/_projects.html.erb
@@ -6,7 +6,7 @@
     <% @projects.each do |project| %>
       <div class="card -mobile-small-1-1 -mobile-large-1-2 -tablet-1-3">
         <h4 class="c-card-title -border-1"><%= t 'active' %></h4>
-        <%= link_to user_project_path(@user, project), class: "link" do  %>
+        <%= link_to project_path(project), class: "link" do  %>
           <h3 class="c-title"><%= project.title %></h3>
         <% end %>
         <div class="c-tag-list -closer">
