--- a/app/assets/stylesheets/components/c-map-tooltip.scss
+++ b/app/assets/stylesheets/components/c-map-tooltip.scss
@@ -37,13 +37,13 @@
     padding: 20px;
     
     h4 {
-      font-size: 20px;
+      font-size: $font-size-normal;
       color: $color-2;
       margin: 0;
     }
     
     p {
-      font-size: 10px;
+      font-size: $font-size-tiny;
       text-transform: uppercase;
       color: $color-2; 
     }
