--- a/app/views/map/_projects.html.erb
+++ b/app/views/map/_projects.html.erb
@@ -1,4 +1,4 @@
-<div class="card -1-2 -tablet-1-4">
+<!-- <div class="card -1-2 -tablet-1-4">
   <h4 class="c-legend-title">
     <div class="icon -color-3"></div>
     Breast
@@ -28,7 +28,7 @@
     Other
   </h4>
   <h2 class="c-title -big">215</h2>
-</div>
+</div> -->
 
 <% if @projects && @projects.size() > 0 %>
   <!-- Project cards -->
