fake data loaded with expired token and painted after each AJAX request

--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -47,7 +47,7 @@
 		<span class="-item">address</span>
 		<span class="-item">lead</span>
 	</div>
-	<div id="c-pregenerated-container">
+	<div id="c-pregenerated-container" class="c-staff">
 	</div>
 </div>
 
