--- a/app/assets/stylesheets/layouts/_project_add.scss
+++ b/app/assets/stylesheets/layouts/_project_add.scss
@@ -94,7 +94,13 @@
 		}
 	}
 	.c-staff {
-		display: table-row;
+		display: table-row-group;
+		.-getrow {
+			display: table-row;
+			span {
+				font-weight: $font-weight-normal;
+			}
+		}
 		span {
 			font-size: $font-size-x-small;
 			text-transform: uppercase;
@@ -131,20 +137,27 @@
 			    position: relative;
 			    z-index: 1;
 			}
-			.circle {
-				display: none;
+			&.f-circle-parent {
+				border-radius: 100%;
+				height: 20px;
+				width: 20px;
+				position: absolute;
+				border: 1px solid #0f3046;
+				display: block;
+				cursor: pointer;
+
 			}
-			input[type=checkbox]:checked ~ .circle {
+			.circle {
 			    display: inline-block;
 			    height: 10px;
 			    width: 10px;
 			    border: 1px solid #0f3046;
 			    border-radius: 100%;
 			    background: #0f3046;
-			    position: relative;
-			    top: -4px;
-			    right: 14px;
 		        pointer-events: none;
+		        position: relative;
+			    left: 4px;
+			    top: 2px;
 			}
 		}
 		&.-headers .-item {
