Changes for project relations form

--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -47,6 +47,7 @@
 	</div>
 	<div id="c-pregenerated-container" class="c-staff">
 	</div>
+  <span class="button saveRelation">save</span>
 </div>
 
 <div class="c-section-container -staff">
