--- a/app/assets/stylesheets/layouts/_project_add.scss
+++ b/app/assets/stylesheets/layouts/_project_add.scss
@@ -180,7 +180,8 @@
     margin: 30px 0 0;
 }
 
-.f-submit {
+.f-submit,
+.saveRelation {
 	width: 130px;
 	height: 45px;
 	background-color: #68299b;
@@ -192,6 +193,7 @@
 	text-transform: uppercase;
     border: none;
     margin: 0 50px 50px;
+  display: block;
 }
 
 .-editable {
