--- a/app/views/network_projects/edit.html.erb
+++ b/app/views/network_projects/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="project_add">
   <%= simple_form_for [@user, @project] do |f| %>
     <%= render partial: f %>
-    <%= f.button :submit, 'Update', class: 'f-submit -network'  %>
+    <span class="pre-submit"><%= f.button :submit, 'Update', class: 'f-submit -network'  %></span>
   <% end %>
 </div>
