--- a/app/views/network_projects/new.html.erb
+++ b/app/views/network_projects/new.html.erb
@@ -1,6 +1,6 @@
 <div class="project_add">
 	<%= simple_form_for [@user, @project], url: user_projects_url(@user) do |f| %>
 	  <%= render partial: f %>
-	  <%= f.button :submit, 'Submit', class: 'f-submit -network' %>
+	  <span class="pre-submit"><%= f.button :submit, 'Submit', class: 'f-submit -network' %></span>
 	<% end %>
 </div>
