small fixing in project creation page

--- a/app/assets/stylesheets/layouts/_project_add.scss
+++ b/app/assets/stylesheets/layouts/_project_add.scss
@@ -112,6 +112,7 @@
 		.-item {
 			display: table-cell;
 			height: 40px;
+      position: relative;
 			.remove_fields {
 				color: #5aade4;
 		    	font-size: 30px;
