--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -23,6 +23,9 @@
 <!-- c-map-filters -->
 <%= render partial: "map-filters" %>
 
+<!-- c-map-tooltips -->
+<%= render partial: "map-tooltips" %>
+
 <!-- c-grid-proyects -->
 <div class="c-card-grid" id="content">
   <%= render(:partial => @current_type) %>
