--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -62,4 +62,6 @@
 
 <script type="text/javascript">
   var PROJECT_ID = <%= @project.id %>;
+  var PROJECT_START_DATE = "<%= @project.start_date || 0 %>";
+  var PROJECT_END_DATE = "<%= @project.end_date || 0 %>";
 </script>
