Map: sortby tooltip

--- a/app/views/map/_map-tooltips.html.erb
+++ b/app/views/map/_map-tooltips.html.erb
@@ -25,3 +25,15 @@
 		</li>
 	</ul>
 </div>
+
+
+<div id="map-sortby" class="c-tooltip -tip-right">
+	<ul>
+		<li class="btn-map-sortby -selected" data-sortby="asc">
+		  <p><span></span> Ascendent</p>
+		</li>
+		<li class="btn-map-sortby" data-sortby="desc">
+		  <p><span></span> Descendent</p>
+		</li>
+	</ul>
+</div>
