--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -44,4 +44,6 @@
 
 <script type="text/javascript">
   var EVENT_ID = <%= @event.id %>;
+  var EVENT_START_DATE = "<%= @event.start_date || 0 %>";
+  var EVENT_END_DATE = "<%= @event.end_date || 0 %>";
 </script>
