hide/show and scroll to staff section

--- a/app/assets/stylesheets/layouts/_project_add.scss
+++ b/app/assets/stylesheets/layouts/_project_add.scss
@@ -36,6 +36,9 @@
 	  		width: 100%;
 			padding: 50px;
 	  	}
+	  	&.-hide-staff {
+	  		display: none;
+	  	}
   	}
 	.-m-edited .chosen-single span {
 		color: rgba($color-2,1);
