--- a/app/views/network_projects/_form.html.erb
+++ b/app/views/network_projects/_form.html.erb
@@ -38,7 +38,7 @@
 	</div>
 </div>
 
-<div class="c-section-container -staff">
+<div class="c-section-container -staff -hide-staff" id="relations">
 	<div class="c-staff -headers">
 		<span class="-item">investigator</span>
 		<span class="-item">organization*</span>
