--- a/app/views/projects/_project-info.html.erb
+++ b/app/views/projects/_project-info.html.erb
@@ -6,11 +6,11 @@
 <div class="card -mobile-large-1-1 -tablet-1-3">
   <div class="c-period-bar">
     <div class="period">
-      <ul>
+      <ul class="start-date">
         <li><%= t 'starts' %></li>
         <li class="date"><%= @project.start_date %></li>
       </ul>
-      <ul>
+      <ul class="end-date">
         <li><%= t 'ends' %></li>
         <li class="date"><%= @project.end_date %></li>
       </ul>
