added close function to flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,13 @@
     <% else %>
       <% if notice %>
         <div class="c-notice">
-          <%= notice %>
+          <div class="container">
+            <%= notice %>
+            <div id="js-close" class="close-btn">
+              <span></span>
+              <span></span>
+            </div>
+          </div>
         </div>
       <% end %>
     <% end %>
