--- a/app/assets/stylesheets/components/_notice.scss
+++ b/app/assets/stylesheets/components/_notice.scss
@@ -19,4 +19,41 @@
   &.-hidden {
     transform: translate(-50%, -100%);
   }
+
+  > .container {
+    position: relative;
+  }
+
+  .close-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 20px;
+    height: 17px;
+    flex-shrink: 0;
+    cursor: pointer;
+    z-index: 1003;
+    -webkit-tap-highlight-color: transparent;
+
+    > span {
+      display: block;
+      height: 2px;
+
+      background-color: $color-3;
+
+      &:first-of-type {
+        transform: translateY(7.5px) rotate(-45deg);
+        transform-origin: center;
+      }
+
+      &:last-of-type {
+        transform: translateY(-7.5px) rotate(45deg);
+        transform-origin: center;
+      }
+    }
+  }
 }
