--- a/app/assets/javascripts/templates/modal.hbs
+++ b/app/assets/javascripts/templates/modal.hbs
@@ -1,6 +1,10 @@
-<div class="c-modal">
+<div class="modal-container">
   <div class="modal-content">
-    <button class="modal-close-btn">&#10006;</button>
-    {{{content}}}
+    {{!-- <button class="modal-close js-btn-modal-close">&#10006;</button> --}}
+    <button class="modal-close js-btn-modal-close">
+      <svg><use xlink:href="#icon-close"></use></svg>
+    </button>
+    <div class="modal-wrapper">{{{content}}}</div>
   </div>
 </div>
+<div class="modal-backdrop js-modal-backdrop"></div>
