--- a/app/views/map/_map-tooltips.html.erb
+++ b/app/views/map/_map-tooltips.html.erb
@@ -1,4 +1,5 @@
 <div id="map-layers" class="c-tooltip -tip-left">
+	<span class="tooltip-arrow"></span>
 	<ul>
 		<li class="btn-map-layer -selected" data-layer="none">
 		  <p><span></span> No layer selected</p>
@@ -28,6 +29,7 @@
 
 
 <div id="map-sortby" class="c-tooltip -tip-right">
+	<span class="tooltip-arrow"></span>
 	<ul>
 		<li class="btn-map-sortby -selected" data-sortby="asc">
 		  <p><span></span> Ascendent</p>
