--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -87,12 +87,12 @@
     z-index: 1; /* Otherwise, it won't be reachable */
 
     svg {
-      width: 20px;
-      height: 20px;
       fill: $color-2;
     }
 
-    &:hover svg { fill: lighten($color-2, 10%); }
+    &:hover svg { 
+      fill: lighten($color-2, 10%); 
+    }
   }
 
   // MODAL WRAPPER
