--- a/app/views/map/_map-filters.html.erb
+++ b/app/views/map/_map-filters.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-window">
     <!-- Modal close button -->
     <button href="#" class="modal-close js-btn-modal-close">
-      <svg><use xlink:href="#icon-close"></use></svg>
+      <svg class="c-svg -normal"><use xlink:href="#icon-close"></use></svg>
     </button>
 
     <!-- Modal wrapper button -->
