--- a/app/sql_queries/projects_map_points.sql.erb
+++ b/app/sql_queries/projects_map_points.sql.erb
@@ -1,6 +1,6 @@
 select
 projects.id as project,
-projects.title as project_title,
+projects.title as title,
 countries.country_name as location_name,
 '{"type":"point","coordinates":[' || addresses.latitude || ',' || addresses.longitude || ']}' as centroid,
 countries.country_iso_3 as iso,
@@ -50,4 +50,4 @@ from projects
     <% if @params[:end_date] %>
       and (projects.end_date < date(<%= quote @params[:end_date] %>))
     <% end %>
-group by project, project_title, location_name, centroid, iso, is_project_lead
+group by project, title, location_name, centroid, iso, is_project_lead
