--- a/app/assets/javascripts/templates/investigators/form.hbs
+++ b/app/assets/javascripts/templates/investigators/form.hbs
@@ -2,6 +2,8 @@
 
 <form action="#">
 
+  {{!-- {{> network_projects/_form}} --}}
+
   <label for="organisation_website">
     Name of investigator:
     <input type="text" name="investigator_name" placeholder="Name of investigator">
